--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,12 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=12345;Database=DbRentCar"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587,
+    "Username": "your_email@example.com",
+    "Password": "your_password"
   }
-
-
 }
