--- a/RentACar.csproj
+++ b/RentACar.csproj
@@ -27,4 +27,9 @@
     <PackageReference Include="System.ServiceModel.Security" Version="6.0.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\img\Brand\" />
+    <Folder Include="wwwroot\img\CarModel\" />
+  </ItemGroup>
+
 </Project>
